[package]
name = "rust_serial"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
influxdb2 = { version = "0.5.2", features = ["rustls"], default-features = false }
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2.0"
influxdb3 = "0.2.0"
num-traits = "0.2.19"
serialport = "4.9.0"
tokio = { version = "1.47", features = ["full"] }
